did some changes

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,39 @@ tmp_notes
 1_preprocessing/stopwords_dict_depression
 
 1_preprocessing/__pycache__/liwcExtractor\.cpython-35\.pyc
+
+0_dataset/Output/
+
+0_dataset/testSh/
+
+tweetPQ
+
+userInfo
+
+*.csv
+
+*.sh
+
+1_preprocessing/img/
+
+0_dataset/diagnosedTweetsPatch2
+
+0_dataset/diagnosedTweetsPatch3
+
+0_dataset/diagnosedTweetsPatch4
+
+1_preprocessing/categoryTableBase
+
+1_preprocessing/categoryTableGroupAndBase
+
+1_preprocessing/categoryTableGroup
+
+1_preprocessing/patterListFeatures
+
+1_preprocessing/threeCategoriesHitNumber
+
+1_preprocessing/top100_correspond20170911_1
+
+1_preprocessing/top100_correspond20170911_2
+
+0_dataset/patch2PatientIDs
