add one more plot graph type

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ userInfo
 0_dataset/patch3PatientIDs
 
 1_preprocessing/patch2FilterOutCase1
+
+0_dataset/sampleOrdinaryIDtoName
+
+0_dataset/sampleOrdinaryIDs
+
+0_dataset/ordinaryIDs
