run new experiments
use less classes (A, B, C, D) / (A, C, D)

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,111 @@ English_to_IPA/
 1_preprocessing/eSPEPhonologicalFeatures
 
 1_preprocessing/eSPEPhonologicalTable
+
+0_dataset/OrdinaryUsersTweets_PoL/
+
+img/
+
+0_dataset/
+
+age_gender_predictor/
+
+1_preprocessing/D1-VSE1\.png
+
+1_preprocessing/D1-VSE10\.png
+
+1_preprocessing/D1-VSE17\.png
+
+1_preprocessing/D1-VSE2\.png
+
+1_preprocessing/D1-VSE9\.png
+
+1_preprocessing/D11\.png
+
+1_preprocessing/D1-VSE4\.png
+
+1_preprocessing/D1-VSE3\.png
+
+1_preprocessing/D110\.png
+
+1_preprocessing/D13\.png
+
+1_preprocessing/D19\.png
+
+1_preprocessing/D12\.png
+
+1_preprocessing/D117\.png
+
+1_preprocessing/D2-VSE1\.png
+
+1_preprocessing/D2-VSE12\.png
+
+1_preprocessing/D2-VSE10\.png
+
+1_preprocessing/D2-VSE3\.png
+
+1_preprocessing/D2-VSE2\.png
+
+1_preprocessing/D2-VSE6\.png
+
+1_preprocessing/D2-VSE19\.png
+
+1_preprocessing/D21\.png
+
+1_preprocessing/D2-VSE9\.png
+
+1_preprocessing/D2-VSE17\.png
+
+1_preprocessing/D210\.png
+
+1_preprocessing/D217\.png
+
+1_preprocessing/D22\.png
+
+1_preprocessing/D23\.png
+
+1_preprocessing/D28\.png
+
+1_preprocessing/D3-VSE1\.png
+
+1_preprocessing/D31\.png
+
+1_preprocessing/D29\.png
+
+1_preprocessing/D3-VSE10\.png
+
+1_preprocessing/D26\.png
+
+1_preprocessing/D3-VSE12\.png
+
+1_preprocessing/D3-VSE17\.png
+
+1_preprocessing/D3-VSE2\.png
+
+1_preprocessing/D3-VSE26\.png
+
+1_preprocessing/D3-VSE3\.png
+
+1_preprocessing/D3-VSE6\.png
+
+1_preprocessing/D3-VSE9\.png
+
+1_preprocessing/D310\.png
+
+1_preprocessing/D317\.png
+
+1_preprocessing/D32\.png
+
+1_preprocessing/D33\.png
+
+1_preprocessing/D39\.png
+
+1_preprocessing/eSPEPhonologicalTable2
+
+1_preprocessing/eSPEPhonologicalTableV2
+
+1_preprocessing/eSPEPhonologicalTableV3
+
+1_preprocessing/eSPEPhonologicalTableV4
+
+1_preprocessing/eSPEPhonologicalTableVES
